--- a/.github/workflows/ultra-tech-task.yml
+++ b/.github/workflows/ultra-tech-task.yml
@@ -18,6 +18,6 @@ jobs:
         with:
           node-version: 16.14.0
       - name: Install all needed dependences
-        uses: npm install
+        run: npm install
       - name: Run Cypress tests
-        uses: npx cypress run
+        run: npx cypress run
